# quid-ai

./: .gitignore  README.md  deploy.sh
Backend/: Dockerfile  pyproject.toml
Backend/apps/insight/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Backend/apps/insight/migrations/: 0001_initial.py
Backend/apps/talent/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
Backend/apps/talent/migrations/: 0001_initial.py  0002_enquiry_mobile.py  0002_remove_faq_created_by_remove_faq_insight_and_more.py
Backend/core/: settings.py  urls.py
Deployment/: docker-compose.yml
Deployment/dev-compose-files/: docker-compose.backend.yml  docker-compose.frontend.yml
frontend/: Dockerfile  Dockerfile.prod
frontend/src/components/ui/: accordion.tsx
frontend/src/pages/: index.tsx
